endpoint to get asset applicants
